plugins {
    id 'java'
    id "com.github.ben-manes.versions" version '0.42.0'
}

repositories {
    mavenCentral()
}

sourceCompatibility = '17'

dependencies {
    implementation 'jakarta.json:jakarta.json-api:2.0.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
    implementation 'co.elastic.clients:elasticsearch-java:8.1.0'
//    implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.1.0'
    // not needed currently
    //implementation 'org.elasticsearch.client:elasticsearch-rest-client-sniffer:8.1.0'

    // log commons over to slf4j over to the console
    // check simplelogger.properties file for logging setup
    implementation 'org.slf4j:jcl-over-slf4j:1.7.36'
    implementation 'org.slf4j:slf4j-simple:1.7.36'

    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.testcontainers:elasticsearch:1.16.3'
    testImplementation 'org.testcontainers:junit-jupiter:1.16.3'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

test {
    useJUnitPlatform()
}
